image text overlap and autoblock issues fixed

--- a/blocks/image-text-overlap/image-text-overlap.scss
+++ b/blocks/image-text-overlap/image-text-overlap.scss
@@ -115,7 +115,7 @@
           }
           &.block {
             h2 {
-              color: $--blue-550;
+              color: $--gray-700;
               width: 100%;
               margin: 0 0 $--spacing-l 0;
               @include for-mobile {
@@ -133,6 +133,9 @@
               text-align: left;
               line-height: 24px;
               margin: 0 0 20px 0;
+              a{
+                font-weight: 500;
+              }
               .icon{
                 height: auto;
                 width: auto;
