--- a/blocks/image-text-with-icon/image-text-with-icon.scss
+++ b/blocks/image-text-with-icon/image-text-with-icon.scss
@@ -98,7 +98,7 @@
           }
           &.block {
             h2 {
-              color: $--blue-550;
+              color: $--gray-700;
               width: 100%;
               margin: 0;
               .icon-promoimage{
@@ -132,6 +132,9 @@
               text-align: left;
               line-height: 24px;
               margin: $--spacing-l 0 20px 0;
+              a{
+                font-weight: 500;
+              }
               .icon{
                 height: auto;
                 width: auto;
